--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,15 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
-    "redux-persist": "^6.0.0"
+    "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
