changes in .env

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
-VITE_BASE_URL="http://localhost:8080"
+# VITE_BASE_URL="http://localhost:8080"
+VITE_BASE_URL="http://31.220.58.235:8181"
+
 VITE_DUMMY_ID="nkwjthw34u58u345ujrtrht3485u8343er"
