--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 # VITE_BASE_URL="http://localhost:8080"
-VITE_BASE_URL="http://brahmand.online:8181"
+VITE_BASE_URL="https://brahmand.online:8181"
 
 VITE_DUMMY_ID="nkwjthw34u58u345ujrtrht3485u8343er"
