--- a/ayurved_admin/.env
+++ b/ayurved_admin/.env
@@ -1,2 +1,2 @@
-# VITE_BASE_URL="https://brahmand.online:8181 "
-VITE_BASE_URL="https://brahmand.online:8181"
+# VITE_BASE_URL="http://localhost:8181 "
+VITE_BASE_URL="http://localhost:8181"
