--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "antd": "^5.15.3",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
