--- a/ayurved_admin/package.json
+++ b/ayurved_admin/package.json
@@ -17,8 +17,10 @@
     "antd": "^5.14.0",
     "apexcharts": "^3.41.0",
     "axios": "^1.6.7",
+    "dompurify": "^3.0.11",
     "dotenv": "^16.4.1",
     "headlessui": "^0.0.0",
+    "jodit-react": "^4.0.15",
     "jsvectormap": "^1.5.3",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
